# rust-game

./: CLAUDE.md  Cargo.toml  README.md  T001_T003_VALIDATION_REPORT.md  T004_VALIDATION_REPORT.md  T005_T006_VALIDATION_REPORT.md  T007_VALIDATION_REPORT.md  T008_VALIDATION_REPORT.md  T009_VALIDATION_REPORT.md  T010_VALIDATION_REPORT.md  T011_TEST_VALIDATION_REPORT.md  T024_FINAL_VALIDATION.md  T024_VALIDATION_REPORT.md  T025_VALIDATION_REPORT.md  T026_T027_INTEGRATION_SUMMARY.md  T026_UPDATE_REPORT.md  T026_VALIDATION_REPORT.md  T027_CAMERA_FIX.md  T027_DEMO_INTEGRATION_VALIDATION.md  T027_FINAL_SUMMARY.md  T027_VALIDATION_REPORT.md  T028_FINAL_SUMMARY.md  T028_VALIDATION_REPORT.md  T029_VALIDATION_REPORT.md  T030_VALIDATION_REPORT.md  T031_VALIDATION_REPORT.md  T032_VALIDATION_REPORT.md  T033_VALIDATION_REPORT.md  T034_VALIDATION_REPORT.md  T035_VALIDATION_REPORT.md  T036_VALIDATION_REPORT.md  T037_VALIDATION_REPORT.md  T037_VALIDATION_SUMMARY.txt  T038_VALIDATION_REPORT.md  T038_VALIDATION_SUMMARY.txt  T039_VALIDATION_REPORT.md  T039_VALIDATION_SUMMARY.txt  T040_VALIDATION_REPORT.md  T040_VALIDATION_SUMMARY.txt  T041_FINAL_VALIDATION.md  (+8 more)
benches/: lighting_bench.rs
src/: lib.rs  main.rs
tests/: candle_burn_test.rs  collision_trap_integration.rs  demo_asset_fallback.rs  demo_interaction.rs  demo_level_loading.rs  demo_level_validation.rs  demo_performance.rs  demo_plugin_integration.rs  fixed_timestep_integration.rs  inventory_integration.rs  inventory_test.rs  level_data_validation.rs  lighting_bench_test.rs  player_death_respawn.rs  puzzle_completion.rs  (+7 more)
(+60 files in other folders)
